--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-client": "^2.4.7",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
