--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.3.11",
     "apollo-client": "^2.4.7",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-http": "^1.5.9",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
